--- a/apps/cli/package.json
+++ b/apps/cli/package.json
@@ -19,6 +19,8 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/marked": "^6.0.0",
+    "@types/marked-terminal": "^6.1.1",
     "@types/node": "^24.6.2",
     "typescript": "5.9.2"
   },
@@ -46,6 +48,8 @@
     "arvo-event-handler": "^3.0.6",
     "chalk": "^5.6.2",
     "dotenv": "^17.2.3",
+    "marked": "^16.3.0",
+    "marked-terminal": "^7.3.0",
     "openai": "^5.22.0",
     "xstate": "^5.22.1",
     "zod": "^3.25.76",
