--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "tsup": "^8.5.0",
     "tsx": "^4.20.6",
     "turbo": "^2.5.8",
-    "typescript": "5.9.2"
+    "typescript": "^5.9.3"
   },
   "packageManager": "pnpm@9.0.0",
   "engines": {
