--- a/packages/agentic-handlers/package.json
+++ b/packages/agentic-handlers/package.json
@@ -27,9 +27,10 @@
     "@arizeai/openinference-semantic-conventions": "^2.1.2",
     "@modelcontextprotocol/sdk": "^1.18.2",
     "@opentelemetry/api": "^1.9.0",
-    "arvo-core": "^3.0.14",
-    "arvo-event-handler": "^3.0.14",
+    "arvo-core": "^3.0.15",
+    "arvo-event-handler": "^3.0.15",
     "openai": "^5.22.0",
+    "uuid": "^13.0.0",
     "xstate": "^5.20.1",
     "zod": "^3.25.67",
     "zod-to-json-schema": "^3.24.5"
