--- a/packages/agentic-handlers/package.json
+++ b/packages/agentic-handlers/package.json
@@ -29,6 +29,7 @@
     "@opentelemetry/api": "^1.9.0",
     "arvo-core": "^3.0.16",
     "arvo-event-handler": "^3.0.16",
+    "liquidjs": "^10.24.0",
     "openai": "^5.22.0",
     "uuid": "^13.0.0",
     "xstate": "^5.20.1",
