--- a/packages/agentic-handlers/package.json
+++ b/packages/agentic-handlers/package.json
@@ -20,7 +20,8 @@
   "license": "ISC",
   "devDependencies": {
     "@types/node": "^24.6.2",
-    "typescript": "5.9.2"
+    "typescript": "5.9.2",
+    "@types/pg": "^8.15.6"
   },
   "dependencies": {
     "@anthropic-ai/sdk": "^0.57.0",
@@ -34,6 +35,7 @@
     "uuid": "^13.0.0",
     "xstate": "^5.20.1",
     "zod": "^3.25.67",
-    "zod-to-json-schema": "^3.24.5"
+    "zod-to-json-schema": "^3.24.5",
+    "pg": "^8.16.3"
   }
 }
