--- a/packages/agentic-handlers/package.json
+++ b/packages/agentic-handlers/package.json
@@ -20,22 +20,23 @@
   "license": "ISC",
   "devDependencies": {
     "@types/node": "^24.6.2",
-    "typescript": "5.9.2",
-    "@types/pg": "^8.15.6"
+    "@types/pg": "^8.15.6",
+    "typescript": "5.9.2"
   },
   "dependencies": {
     "@anthropic-ai/sdk": "^0.57.0",
     "@arizeai/openinference-semantic-conventions": "^2.1.2",
     "@modelcontextprotocol/sdk": "^1.18.2",
     "@opentelemetry/api": "^1.9.0",
-    "arvo-core": "^3.0.16",
-    "arvo-event-handler": "^3.0.16",
+    "arvo-core": "^3.0.18",
+    "arvo-event-handler": "^3.0.18",
+    "dotenv": "^17.2.3",
     "liquidjs": "^10.24.0",
     "openai": "^5.22.0",
+    "pg": "^8.16.3",
     "uuid": "^13.0.0",
-    "xstate": "^5.20.1",
-    "zod": "^3.25.67",
-    "zod-to-json-schema": "^3.24.5",
-    "pg": "^8.16.3"
+    "xstate": "^5.23.0",
+    "zod": "^3.25.76",
+    "zod-to-json-schema": "^3.24.6"
   }
 }
