--- a/packages/agentic-handlers/package.json
+++ b/packages/agentic-handlers/package.json
@@ -13,7 +13,11 @@
   "scripts": {
     "build": "tsup",
     "dev": "tsx watch src/index.ts",
-    "start": ""
+    "start": "",
+    "test": "vitest",
+    "test:ui": "vitest --ui",
+    "test:run": "vitest run",
+    "test:coverage": "vitest run --coverage"
   },
   "keywords": [],
   "author": "",
@@ -21,15 +25,32 @@
   "devDependencies": {
     "@types/node": "^24.6.2",
     "@types/pg": "^8.15.6",
-    "typescript": "5.9.2"
+    "typescript": "5.9.2",
+    "@vitest/coverage-v8": "^4.0.6",
+    "@vitest/ui": "^4.0.6",
+    "vitest": "^4.0.6",
+    "@opentelemetry/api": "^1.9.0",
+    "@opentelemetry/auto-instrumentations-node": "^0.62.1",
+    "@opentelemetry/context-zone": "^2.1.0",
+    "@opentelemetry/exporter-trace-otlp-grpc": "^0.203.0",
+    "@opentelemetry/exporter-trace-otlp-http": "^0.205.0",
+    "@opentelemetry/exporter-trace-otlp-proto": "^0.205.0",
+    "@opentelemetry/instrumentation": "^0.205.0",
+    "@opentelemetry/instrumentation-document-load": "^0.50.0",
+    "@opentelemetry/resources": "^2.0.1",
+    "@opentelemetry/sdk-metrics": "^2.0.1",
+    "@opentelemetry/sdk-node": "^0.203.0",
+    "@opentelemetry/sdk-trace-node": "^2.0.1",
+    "@opentelemetry/sdk-trace-web": "^2.1.0",
+    "@opentelemetry/semantic-conventions": "^1.36.0"
   },
   "dependencies": {
     "@anthropic-ai/sdk": "^0.57.0",
     "@arizeai/openinference-semantic-conventions": "^2.1.2",
     "@modelcontextprotocol/sdk": "^1.18.2",
     "@opentelemetry/api": "^1.9.0",
-    "arvo-core": "^3.0.18",
-    "arvo-event-handler": "^3.0.18",
+    "arvo-core": "^3.0.19",
+    "arvo-event-handler": "^3.0.19",
     "dotenv": "^17.2.3",
     "liquidjs": "^10.24.0",
     "openai": "^5.22.0",
