--- a/packages/agentic-handlers/package.json
+++ b/packages/agentic-handlers/package.json
@@ -23,12 +23,6 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@types/node": "^24.6.2",
-    "@types/pg": "^8.15.6",
-    "typescript": "5.9.2",
-    "@vitest/coverage-v8": "^4.0.6",
-    "@vitest/ui": "^4.0.6",
-    "vitest": "^4.0.6",
     "@opentelemetry/api": "^1.9.0",
     "@opentelemetry/auto-instrumentations-node": "^0.62.1",
     "@opentelemetry/context-zone": "^2.1.0",
@@ -42,18 +36,25 @@
     "@opentelemetry/sdk-node": "^0.203.0",
     "@opentelemetry/sdk-trace-node": "^2.0.1",
     "@opentelemetry/sdk-trace-web": "^2.1.0",
-    "@opentelemetry/semantic-conventions": "^1.36.0"
+    "@opentelemetry/semantic-conventions": "^1.36.0",
+    "@types/node": "^24.6.2",
+    "@types/pg": "^8.15.6",
+    "@vitest/coverage-v8": "^4.0.6",
+    "@vitest/ui": "^4.0.6",
+    "typescript": "5.9.2",
+    "vitest": "^4.0.6"
   },
   "dependencies": {
     "@anthropic-ai/sdk": "^0.57.0",
     "@arizeai/openinference-semantic-conventions": "^2.1.2",
-    "@modelcontextprotocol/sdk": "^1.18.2",
+    "@arvo-tools/agentic": "^1.0.0",
+    "@modelcontextprotocol/sdk": "^1.22.0",
     "@opentelemetry/api": "^1.9.0",
     "arvo-core": "^3.0.19",
     "arvo-event-handler": "^3.0.19",
     "dotenv": "^17.2.3",
     "liquidjs": "^10.24.0",
-    "openai": "^5.22.0",
+    "openai": "^6.9.1",
     "pg": "^8.16.3",
     "uuid": "^13.0.0",
     "xstate": "^5.23.0",
