--- a/deno.json
+++ b/deno.json
@@ -2,12 +2,15 @@
   "tasks": {
     "start": "OTEL_DENO=true OTEL_SERVICE_NAME=deno-agents deno run -A main.ts",
     "dev": "OTEL_DENO=true OTEL_SERVICE_NAME=deno-agents deno run --watch main.ts",
+    "test": "OTEL_DENO=true OTEL_SERVICE_NAME=deno-agents-test deno test",
     "otel": "docker run --rm -e COLLECTOR_ZIPKIN_HOST_PORT=:9411 -p 16686:16686 -p 4317:4317 -p 4318:4318 -p 9411:9411 jaegertracing/all-in-one:latest"
   },
   "imports": {
     "@arvo-tools/agentic": "npm:@arvo-tools/agentic@^1.2.5",
     "@std/assert": "jsr:@std/assert@1",
     "@std/dotenv": "jsr:@std/dotenv@^0.225.5",
+    "@std/expect": "jsr:@std/expect@^1.0.17",
+    "@std/testing": "jsr:@std/testing@^1.0.16",
     "arvo-core": "npm:arvo-core@^3.0.25",
     "arvo-event-handler": "npm:arvo-event-handler@^3.0.25",
     "xstate": "npm:xstate@5.24.0",
@@ -16,7 +19,7 @@
   },
   "fmt": {
     "useTabs": false,
-    "lineWidth": 120,
+    "lineWidth": 80,
     "indentWidth": 2,
     "semiColons": true,
     "singleQuote": true,
