--- a/deno.json
+++ b/deno.json
@@ -2,11 +2,14 @@
   "tasks": {
     "start": "OTEL_DENO=true OTEL_SERVICE_NAME=deno-agents deno run -A main.ts",
     "dev": "OTEL_DENO=true OTEL_SERVICE_NAME=deno-agents deno run --watch main.ts",
-    "test": "OTEL_DENO=true OTEL_SERVICE_NAME=deno-agents-test deno test",
+    "test": "OTEL_DENO=true OTEL_SERVICE_NAME=deno-agents-test deno test -A",
     "otel": "docker run --rm -e COLLECTOR_ZIPKIN_HOST_PORT=:9411 -p 16686:16686 -p 4317:4317 -p 4318:4318 -p 9411:9411 jaegertracing/all-in-one:latest"
   },
   "imports": {
-    "@arvo-tools/agentic": "npm:@arvo-tools/agentic@^1.2.5",
+    "@arvo-tools/agentic": "npm:@arvo-tools/agentic@^1.2.8",
+    "@inquirer/confirm": "npm:@inquirer/confirm@^6.0.3",
+    "@inquirer/prompts": "npm:@inquirer/prompts@^8.1.0",
+    "@opentelemetry/api": "npm:@opentelemetry/api@^1.9.0",
     "@std/assert": "jsr:@std/assert@1",
     "@std/dotenv": "jsr:@std/dotenv@^0.225.5",
     "@std/expect": "jsr:@std/expect@^1.0.17",
@@ -28,7 +31,8 @@
   },
   "lint": {
     "rules": {
-      "tags": ["recommended"]
+      "tags": ["recommended"],
+      "exclude": ["require-await"]
     }
   }
 }
