--- a/deno.json
+++ b/deno.json
@@ -1,12 +1,12 @@
 {
   "tasks": {
-    "start": "OTEL_DENO=true OTEL_SERVICE_NAME=deno-agents OTEL_EXPORTER_OTLP_TRACES_ENDPOINT=\"http://localhost:6001/arize/v1/traces\" deno run -A main.ts",
+    "start": "OTEL_DENO=true OTEL_SERVICE_NAME=deno-agents deno run -A main.ts",
     "dev": "OTEL_DENO=true OTEL_SERVICE_NAME=deno-agents deno run --watch main.ts",
     "test": "OTEL_DENO=true OTEL_SERVICE_NAME=deno-agents-test deno test -A",
     "otel": "docker run --rm -e COLLECTOR_ZIPKIN_HOST_PORT=:9411 -p 16686:16686 -p 4317:4317 -p 4318:4318 -p 9411:9411 jaegertracing/all-in-one:latest"
   },
   "imports": {
-    "@arvo-tools/agentic": "npm:@arvo-tools/agentic@^1.2.11",
+    "@arvo-tools/agentic": "npm:@arvo-tools/agentic@^1.2.14",
     "@inquirer/confirm": "npm:@inquirer/confirm@^6.0.3",
     "@inquirer/prompts": "npm:@inquirer/prompts@^8.1.0",
     "@opentelemetry/api": "npm:@opentelemetry/api@^1.9.0",
@@ -14,10 +14,10 @@
     "@std/dotenv": "jsr:@std/dotenv@^0.225.5",
     "@std/expect": "jsr:@std/expect@^1.0.17",
     "@std/testing": "jsr:@std/testing@^1.0.16",
-    "arvo-core": "npm:arvo-core@^3.0.25",
-    "arvo-event-handler": "npm:arvo-event-handler@^3.0.25",
+    "arvo-core": "npm:arvo-core@^3.0.26",
+    "arvo-event-handler": "npm:arvo-event-handler@^3.0.26",
     "xstate": "npm:xstate@5.24.0",
-    "zod": "npm:zod@^3.25.74",
+    "zod": "npm:zod@^3.25.76",
     "zod-to-json-schema": "npm:zod-to-json-schema@^3.25.0"
   },
   "fmt": {
