--- a/deno.json
+++ b/deno.json
@@ -16,6 +16,8 @@
     "@std/testing": "jsr:@std/testing@^1.0.16",
     "arvo-core": "npm:arvo-core@^3.0.27",
     "arvo-event-handler": "npm:arvo-event-handler@^3.0.27",
+    "async-mutex": "npm:async-mutex@^0.5.0",
+    "p-queue": "npm:p-queue@^9.0.1",
     "xstate": "npm:xstate@5.24.0",
     "zod": "npm:zod@^3.25.76",
     "zod-to-json-schema": "npm:zod-to-json-schema@^3.25.0"
